--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,15 @@ dz 2
 fork dz 1
 lesson2
 lesson3Seminar
+dz 3
+homework
+lesson
+lesson3Seminar
+les3
+lesson4
+lesson5Seminar
+bin
+obj
+.csproj
+
 .gitignore
