--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ dz 2
 fork dz 1
 lesson2
 lesson3Seminar
-dz 3
+dz3
 homework
 lesson
 lesson3Seminar
@@ -12,5 +12,7 @@ lesson5Seminar
 bin
 obj
 .csproj
-
+lesson7Seminar
 .gitignore
+dz5
+dz
